--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10706,7 +10706,11 @@ These options are activated:
     <value>You should work {0} hours.</value>
     <comment>You should work X hours.</comment>
   </data>
-  <data name="MissingAbsenceType" xml:space="preserve">
+	<data name="YouShouldWorkBetweenXAndYHours" xml:space="preserve">
+    <value>You should work {0} to {1} hours.</value>
+    <comment>You should work X to Y hours.</comment>
+  </data>
+	<data name="MissingAbsenceType" xml:space="preserve">
     <value>Missing absence type.</value>
     <comment>Missing absence type.</comment>
   </data>
